configured logstash pipeline